--- a/css/style.css
+++ b/css/style.css
@@ -31,6 +31,12 @@
     margin-top: 2rem;
 }
 
+.marketing h2 {
+    font-size: 3rem;
+    margin-bottom: 6rem;
+    margin-top: 2rem;
+}
+
 .float-right {
     float: right;
 }
